# test-toolkit-studio

./: .gitattributes  .gitignore  CLAUDE.md  README.md  The_ToolkitScript_Reference.md  Toolkit Studio Homepage Feature Present.md  Windows iOS Autotest Scheme.md  check-env.bat  ci.sh  dev.sh  index.html  main-backup.js.bak  main.js  make-mac.sh  make-win.bat  make.sh  package-lock.json  package.json  run.sh  test-logcat-encoding.js
.github/workflows/: deploy-website.yml  release.yml
assets/logo/: icon-bak.icns  icon.icns  icon_original.icns  resize.sh
autoserver-android/: build.gradle  build.sh  build_without_gradle.sh  settings.gradle
docs/: Editor_Refactoring_Phase1_Summary.md  Editor_Refactoring_Phase2_Summary.md  Editor_Refactoring_Phase3_Summary.md  Editor_Refactoring_Plan.md  Editor_Refactoring_Summary.md  TKS_Syntax_Highlighting.md  The_ToolkitScript_Reference.md  Windows_iOS_Autotest_Scheme.md  device-screen-refactor.md  frontend-state-management.md  in-app-selfhost-automation-framework.md  ocr-service.md  scrcpy-based-solution.md  selfhost-automation-mvp.md  tke-autoserver-device-screen-refactor.md  tke-cli-manual.md  tke-json-output-refactor.md  tke-refactor-with-autoserver.md  toolkit-api-gateway.md  windows-program-env.md
handlers/: README.md  adb-handlers.js  auth-handlers.js  log-handlers.js  logcat-handlers.js  other-handlers.js  project-handlers.js  store-handlers.js  window-handlers.js
handlers/api-proxy/: bug-analysis.js  release-notes-handler.js  toolkit-gateway.js
opencv-matcher/: build-mac.sh  build-win.bat  build.sh  opencv_matcher.py  pyproject.toml
renderer/: index.html  index_backup.html  login.html
renderer/html/: index.html  (+1 more)
test/: check-env.bat  demo-mjpeg.html
tester-ai/: Cargo.toml  README.md  build-mac.sh  build-win.bat  build.rs  build.sh
tester-ai/src/: lib.rs  main.rs  orchestrator.rs  orchestrator_execute.rs
tester-ai/src/agents/: librarian.rs  mod.rs  receptionist.rs  supervisor.rs  worker.rs
tester-ai/src/core/: mod.rs  test_controller.rs
tester-ai/src/models/: action.rs  input.rs  mod.rs  output.rs  screen.rs
tester-ai/src/parser/: action_translator.rs  element_manager.rs  mod.rs  worker_parser.rs
tester-ai/src/tke/: commands.rs  executor.rs  mod.rs
tester-ai/src/tke_integration/: mod.rs
tks-language-support/: QUICKSTART.md  README.md  language-configuration.json  package.json
toolkit-ai-tester/: Cargo.toml  README.md
toolkit-ai-tester/src/: main.rs  test_rig.rs
toolkit-ai-tester/src/agents/: librarian.rs  worker.rs
toolkit-ai-tester/src/core/: error.rs
toolkit-ai-tester/src/ocr/: mod.rs
toolkit-engine/: Cargo.toml  build-mac.sh  build-win.bat  build.rs  build.sh
toolkit-engine/opencv-matcher/: build.sh  main.py  pyproject.toml
toolkit-engine/src/: adb_manager.rs  lib.rs  main.rs
toolkit-engine/src/aapt/: mod.rs
toolkit-engine/src/adb/: mod.rs
toolkit-engine/src/controller/: mod.rs
toolkit-engine/src/fetcher/: mod.rs
toolkit-engine/src/handlers/: aapt.rs  adb.rs  controller.rs  fetcher.rs  mod.rs  ocr.rs  parser.rs  recognizer.rs  runner.rs  server.rs
toolkit-engine/src/locator_fetcher/: mod.rs
toolkit-engine/src/models/: mod.rs
toolkit-engine/src/ocr/: mod.rs  offline.rs  online.rs  types.rs
toolkit-engine/src/parser/: interpreter.rs  mod.rs  parser.rs
toolkit-engine/src/recognizer/: fast_matcher.rs  image.rs  mod.rs  text.rs  xml.rs
toolkit-engine/src/runner/: interpreter.rs  mod.rs  parser.rs
toolkit-engine/src/script_interpreter/: mod.rs
toolkit-engine/src/script_parser/: mod.rs
toolkit-engine/src/server/: mod.rs  video_stream.rs
toolkit-engine/src/utils/: aapt_manager.rs  adb_manager.rs  json_output.rs  mod.rs
website/: CNAME  index.html  release-notes.html
(+312 files in other folders)
