[package]
name = "ai-tester"
version = "0.3.3"
edition = "2021"

[dependencies]
# RIG框架 - AI Agent框架 (使用最新版本)
rig_core = { package = "rig-core", version = "0.20" }

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP 客户端
reqwest = { version = "0.12", features = ["json"] }

# 错误处理
anyhow = "1.0"
thiserror = "2.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 命令行参数
clap = { version = "4.5", features = ["derive"] }

# 文件系统操作
walkdir = "2.5"

# 正则表达式
regex = "1.11"

# 图像处理 (用于OCR预处理)
image = "0.25"

# Base64 编码
base64 = "0.22"

# UUID生成
uuid = { version = "1.11", features = ["v4", "serde"] }

# 进程管理
sysinfo = "0.32"

# 路径处理
dirs = "5.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# async-trait
async-trait = "0.1"

# XML 解析
quick-xml = "0.36"
