[package]
name = "tke"
version = "0.3.1"
edition = "2021"
authors = ["Eric Wang"]
description = "Toolkit Engine - CLI tool for automated testing"

[dependencies]
# CLI框架
clap = { version = "4.5", features = ["derive"] }
# 异步运行时
tokio = { version = "1.40", features = ["full"] }
# 错误处理
anyhow = "1.0"
thiserror = "1.0"
# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# XML解析
quick-xml = "0.36"
# 图像处理
image = "0.25"
imageproc = "0.25"
# 并行处理
rayon = "1.10"
# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# 路径处理
dirs = "5.0"
# 正则表达式
regex = "1.10"
# 进程执行
which = "6.0"
# 时间处理
chrono = { version = "0.4", features = ["serde"] }
