[package]
name = "tke"
version = "0.4.1"
edition = "2021"
authors = ["Eric Wang"]
description = "Toolkit Engine - CLI tool for automated testing"

[dependencies]
# CLI框架
clap = { version = "4.5", features = ["derive"] }
# 异步运行时
tokio = { version = "1.40", features = ["full"] }
# 错误处理
anyhow = "1.0"
thiserror = "1.0"
# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# XML解析
quick-xml = "0.36"
# 图像处理
image = "0.25"
imageproc = "0.25"
# 并行处理
rayon = "1.10"
# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# 路径处理
dirs = "5.0"
# 正则表达式
regex = "1.10"
# 进程执行
which = "6.0"
# 时间处理
chrono = { version = "0.4", features = ["serde"] }
# OCR相关
tesseract-rs = { version = "0.1.20", features = ["build-tesseract"], optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
base64 = "0.22"

[features]
# 默认启用在线和离线 OCR
default = ["ocr-online", "ocr-offline"]
# 在线 OCR 功能
ocr-online = ["reqwest"]
# 离线 OCR 功能（Tesseract）
ocr-offline = ["tesseract-rs"]
